--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ a {
     text-decoration: none;
 }
 
-#Education{
+section#Education{
     display: grid; 
     grid-template-columns: 10em auto 10em;
 }
